...
                  ),
                  decoration: pw.BoxDecoration(
                    color: _cGold,
                    borderRadius: pw.BorderRadius.circular(6),
                  ),
                  child: pw.Text(
                    'كشف حساب',
                    style: pw.TextStyle(
                      font: fonts.bold,
                      fontSize: 13,
                      color: const PdfColor(1, 1, 1),
                    ),
                  ),
...
